--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>LudumDare40</title>
+	<style>
+		*{
+			pointer-events: all;
+		}
+	</style>
 	<style>body { margin: 0; }</style>
 </head>
 <body>
